--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
       <footer>
         This project was coded by
-        <a href="https://github.com/ketaki-c?tab=repositories" target="_blank"> Matt Delac</a>,
+        <a href="https://github.com/ketaki-c?tab=repositories" target="_blank"> Ketaki Chakraborty</a>,
         is
-        <a href="https://github.com/matthieua/meteo" target="_blank"
+        <a href="https://github.com/ketaki-c/forecast" target="_blank"
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://meteo-shecodes-app.netlify.app/" target="_blank"
+        <a href="https://wondrous-bubblegum-eb535d.netlify.app/" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
