--- a/index.html
+++ b/index.html
@@ -1,65 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="src/style.css" />
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <title>Forecast App</title>
-  </head>
-  <body>
-    <div class="weather-app">
-      <header>
-        <form class="search-form" id="search-form">
-          <input
-            type="search"
-            placeholder="Enter a city.."
-            required
-            id="search-form-input"
-            class="search-form-input"
-          />
-          <input type="submit" value="Search" class="search-form-button" />
-        </form>
-      </header>
-      <main>
-        <div class="weather-app-data">
-          <div>
-            <h1 class="weather-app-city" id="city"></h1>
-            <p class="weather-app-details">
-              <span id="time"></span>,
-              <span id="description"></span>
-              <br />
-              Humidity: <strong id="humidity"></strong>, Wind:
-              <strong id="wind-speed"></strong>
-            </p>
-          </div>
-          <div class="weather-app-temperature-container">
-            <div id="icon"></div>
-            <div class="weather-app-temperature" id="temperature"></div>
-            <div class="weatehr-app-unit">°C</div>
-          </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/d408c2f1d0.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/style.css">
+    <title>Weather App</title>
+</head>
+<body>
+    <div class="container">
+        <div class="weather-wrapper">
+            <div class="weather-app">
+                <form class="input-group" id="search-form">
+                    <input 
+                    type="text" 
+                    class="form-control mb-3 "
+                    placeholder="enter a city"
+                    id ="city-input"
+                    autocomplete="off";
+                    autofocus ="on";
+                    />
+                    <button 
+                    class="btn btn-outline-secondary mb-3" 
+                    type="submit"
+                    id="search-button">
+                    <i class="fas fa-search-location"></i>
+                </button>
+                    <button 
+                    class="btn btn-outline-secondary mb-3" 
+                    type="button"
+                    id = "current-button">
+                    <i class="fas fa-map-pin"></i> current location
+                </button>
+            </form>
+                <div class="overview">
+                <h1 id= "city"></h1>
+                <ul>
+                    <li>Last updated: <span id ="date"></span></li>
+                    <li id = "description"></li>
+                </ul>
+            </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="d-flex weather-temperature">
+                            <img src="" alt="" class=float-left id = "icon"/>
+                            <div class="float-left">
+                                 <strong id ="temperature"></strong> 
+                                 <span class= units>
+                                °F</span>
+                            </div>
+                        </div>
+                    </div>
+                <div class="col-6">
+                    <ul>
+                        <li>
+                            Feels Like: <span id = "feels-like"></span> °F
+                        </li>
+                        <li>
+                            Humidity: <span id = "humidity"></span> %
+                        </li>
+                        <li>
+                            Wind: <span id = "wind"></span> mph
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card" >
+                <section class="forecast" >
+                    <div class="card-header">
+                        5 Day Forecast
+                    </div>
+                    <div class="card-body" id= "forecast">
+                    </div>
+                </section>
+            </div>
         </div>
-      </main>
-
-      <footer>
-        This project was coded by
-        <a href="https://github.com/ketaki-c?tab=repositories" target="_blank"> Ketaki Chakraborty</a>,
-        is
-        <a href="https://github.com/ketaki-c/forecast" target="_blank"
-          >open-sourced on GitHub</a
-        >
-        and
-        <a href="https://wondrous-bubblegum-eb535d.netlify.app/" target="_blank"
-          >hosted on Netlify</a
-        >
-      </footer>
+        <small> <a href="https://github.com/als11022/weather-app-vanilla" target ="_blank"> Open-source code</a> by Abby Szach</small>
     </div>
-    <script src="src/index.js"></script>
-  </body>
+    </div>
+    <script src="src/app.js"></script>
+</body>
 </html>
