--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     class="btn btn-outline-secondary mb-3" 
                     type="button"
                     id = "current-button">
-                    <i class="fas fa-map-pin"></i> current location
+                    <i class="fas fa-map-pin"></i> Current location
                 </button>
             </form>
                 <div class="overview">
@@ -57,13 +57,13 @@
                 <div class="col-6">
                     <ul>
                         <li>
-                            Feels Like: <span id = "feels-like"></span> °F
+                            Feels Like: <span id = "Feels-like"></span> °F
                         </li>
                         <li>
-                            Humidity: <span id = "humidity"></span> %
+                            Humidity: <span id = "Humidity"></span> %
                         </li>
                         <li>
-                            Wind: <span id = "wind"></span> mph
+                            Wind: <span id = "Wind"></span> mph
                         </li>
                     </ul>
                 </div>
@@ -78,7 +78,7 @@
                 </section>
             </div>
         </div>
-        <small> <a href="https://github.com/als11022/weather-app-vanilla" target ="_blank"> Open-source code</a> by Abby Szach</small>
+        <small> <a href="https://github.com/als11022/weather-app-vanilla" target ="_blank"> Open-source code</a> by Ketaki Chakraborty</small>
     </div>
     </div>
     <script src="src/app.js"></script>
