--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     class="form-control mb-3 "
                     placeholder="enter a city"
                     id ="city-input"
-                    autocomplete="off";
-                    autofocus ="on";
+                    autocomplete="off"
+                    autofocus ="on"
                     />
                     <button 
                     class="btn btn-outline-secondary mb-3" 
@@ -57,13 +57,13 @@
                 <div class="col-6">
                     <ul>
                         <li>
-                            Feels Like: <span id = "Feels-like"></span> °F
+                            feels Like: <span id = "feels-like"></span> °F
                         </li>
                         <li>
-                            Humidity: <span id = "Humidity"></span> %
+                            humidity: <span id = "humidity"></span> %
                         </li>
                         <li>
-                            Wind: <span id = "Wind"></span> mph
+                            wind: <span id = "wind"></span> mph
                         </li>
                     </ul>
                 </div>
