--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <small> <a href="https://github.com/als11022/weather-app-vanilla" target ="_blank"> Open-source code</a> by Ketaki Chakraborty</small>
     </div>
     </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="src/app.js"></script>
 </body>
 </html>
