--- a/index.html
+++ b/index.html
@@ -1,85 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Weather App</title>
-  <link rel="stylesheet" href="styles/style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-</head>
-
-<body class="start">
-  <div class="container">
-    <form class="row g-4" id="search-form">
-      <div class="col-6">
-        <label for="search" class="visually-hidden">🔍Seacrh Your City</label>
-
-        <input type="search" class="form-control search" placeholder="🔍Seacrh Your City" id="query" />
-      </div>
-      <div class="col-auto">
-        <button type="submit" class="btn btn-primary mb-3 search button">
-          Search
-        </button>
-      </div>
-
-    </form>
-    <div class="heading">
-      <h1 id="name"></h1>
-      <h5 id="date"></h5>
-      <p></p>
-    </div>
-    <div>
-
-      <div class="weatherForecast">
-        <div class="row align-items-center one">
-          <div>
-            <div class="first">
-              <strong class="temperature" id="temperature"></strong>
-              <span class="units" id="units">
-                <a href="#" id="celsius" class="active">°C</a> |
-                <a href="#" id="fahrenheit">°F</a></span>
-              <div class="col" id="description"></div>
-              <div class="col">
-                <div class="icon">
-                  <img id="icon" src="https://openweathermap.org/img/wn/10d@2x.png" alt="weather icon" />
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <title>Weather App</title>
+  </head>
+  <body>
+    <div class="root">
+      <div class="app">
+        <div class="container">
+          <div class="weather">
+            <form id="search-form">
+              <div class="row">
+                <div class="col-9">
+                  <input
+                    type="search"
+                    placeholder="Enter a city..."
+                    class="form-control search-input"
+                    id="search-input"
+                  />
+                </div>
+                <div class="col-3">
+                  <input
+                    type="submit"
+                    class="btn btn-primary w-100"
+                    value="Search"
+                  />
                 </div>
               </div>
-              <div class="second">
-                <div class="col">
-                  <div class="col"> Humidity: <span class="picture"><img src="images/output-onlinegiftools.gif"
-                        width="40px" /></span><span id="humid">77</span>%</div>
-
-                  <div class="col">Wind: <span class="picture"><img src="images/output-onlinegiftools (1).gif"
-                        width="40px" /><span id="wind">24</span>km</div>
+            </form>
+            <div class="weatherInfo">
+              <div class="row">
+                <div class="col-6">
+                  <h1 id="city"></h1>
+                  <ul>
+                    <li>
+                      <span id="date"></span>,
+                      <span id="description"></span>
+                    </li>
+                    <li>
+                      Humidity: <strong><span id="humidity"></span>%</strong>,
+                      Wind: <strong><span id="wind"></span> km/h</strong>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-8">
+                  <div
+                    class="d-flex justify-content-end weather-temp"
+                    id="icon"
+                  >
+                    <img
+                      src="https://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+                      alt="weather-icon"
+                      class="weatherIcon"
+                      id="weatherIcon"
+                    />
+                    <div>
+                      <span class="temperature" id="temperature"></span>
+                      <span class="units"
+                        ><a href="#" id="celsius-link" class="black cyan">°C</a>
+                        |
+                        <a href="#" id="fahrenheit-link" class="cyan"
+                          >°F</a
+                        ></span
+                      >
+                    </div>
+                  </div>
                 </div>
               </div>
-              <div class="third">
-                <div class="col">22°C</div>
-                <div class="col">━</div>
-                <div class="col">14°C</div>
-              </div>
+            </div>
+            <div class="weatherForecast row" id="forecast"></div>
+            <div>
+              <!-- <footer>
+                This project was coded by
+                <a href="https://github.com/ketaki-c" target="_blank"
+                  >Ketaki Chakraborty</a
+                >
+                and is
+                <a
+                  href="https://github.com/ketaki-c/forecast"
+                  target="_blank"
+                  >open-sourced on GitHub</a
+                >
+                and
+                <a
+                  href="https://wondrous-bubblegum-eb535d.netlify.app/?#"
+                  target="_blank"
+                  >hosted on Netlify</a
+                >
+              </footer> -->
             </div>
           </div>
         </div>
       </div>
-      <div class="containertwo">
-        <div class="g-0 container text-center">
-          <div class="weather" id="weather-five">
-            <div class="row align-items-center one">
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
-  <span><a href="https://github.com/ketaki-c/forecast" target="_blank">Open-Source Code</a>,
-    by Ketaki </span>
-  <script src="src\app.js"></script>
-</body>
-
+    <div class="icons">
+      This project was coded by
+      <a href="https://github.com/ketaki-c" target="_blank" class="links"
+        >Ketaki Chakraborty</a
+      >
+      and is
+      <a
+        href="https://github.com/ketaki-c/forecast"
+        target="_blank"
+        class="links"
+        >open-sourced on GitHub</a
+      >
+      and
+      <a
+        href="https://wondrous-bubblegum-eb535d.netlify.app/?#"
+        target="_blank"
+        class="links"
+        >hosted on Netlify</a
+      >
+    </div>
+  </body>
+  <script src="src/app.js"></script>
 </html>
