--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                   >hosted on Netlify</a
                 >
               </footer> -->
+              footer {
+                font-size: 18px; /* Adjust the size to your preference */
+              }
             </div>
           </div>
         </div>
