--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="col-9">
                   <input
                     type="search"
-                    placeholder="Enter a city..."
+                    placeholder="Enter a city"
                     class="form-control search-input"
                     id="search-input"
                   />
@@ -102,6 +102,7 @@
       </div>
     </div>
     <div class="icons">
+      font-size: 16px 
       This project was coded by
       <a href="https://github.com/ketaki-c" target="_blank" class="links"
         >Ketaki Chakraborty</a
