--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div class="icons">
-      font-size: 16px 
+      font-size: 20px;
       This project was coded by
       <a href="https://github.com/ketaki-c" target="_blank" class="links"
         >Ketaki Chakraborty</a
