--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div class="icons">
-      font-size: 20px;
+      
       This project was coded by
       <a href="https://github.com/ketaki-c" target="_blank" class="links"
         >Ketaki Chakraborty</a
@@ -121,7 +121,10 @@
         class="links"
         >hosted on Netlify</a
       >
-     
+
+      .icons {
+        font-size: 18px;
+      }
     </div>
   </body>
   <script src="src/app.js"></script>
