--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="weatherForecast row" id="forecast"></div>
             <div>
-              <!-- <footer>
+              <footer>
                 This project was coded by
                 <a href="https://github.com/ketaki-c" target="_blank"
                   >Ketaki Chakraborty</a
@@ -94,34 +94,14 @@
                   target="_blank"
                   >hosted on Netlify</a
                 >
-              </footer> -->
+              </footer>
              
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="icons">
-      
-      This project was coded by
-      <a href="https://github.com/ketaki-c" target="_blank" class="links"
-        >Ketaki Chakraborty</a
-      >
-      and is
-      <a
-        href="https://github.com/ketaki-c/forecast"
-        target="_blank"
-        class="links"
-        >open-sourced on GitHub</a
-      >
-      and
-      <a
-        href="https://wondrous-bubblegum-eb535d.netlify.app/?#"
-        target="_blank"
-        class="links"
-        >hosted on Netlify</a
-      >
-    </div>
+   
   </body>
   <script src="src/app.js"></script>
 </html>
