--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
             <div class="weatherForecast row" id="forecast"></div>
             <div>
               <footer>
+                footer {
+                  font-size: 18px;
+                }
                 This project was coded by
                 <a href="https://github.com/ketaki-c" target="_blank"
                   >Ketaki Chakraborty</a
