--- a/index.html
+++ b/index.html
@@ -77,34 +77,34 @@
             </div>
             <div class="weatherForecast row" id="forecast"></div>
             <div>
-              <footer>
-                footer {
-                  font-size: 18px;
-                }
-                This project was coded by
-                <a href="https://github.com/ketaki-c" target="_blank"
-                  >Ketaki Chakraborty</a
-                >
-                and is
-                <a
-                  href="https://github.com/ketaki-c/forecast"
-                  target="_blank"
-                  >open-sourced on GitHub</a
-                >
-                and
-                <a
-                  href="https://wondrous-bubblegum-eb535d.netlify.app/?#"
-                  target="_blank"
-                  >hosted on Netlify</a
-                >
-              </footer>
              
             </div>
           </div>
         </div>
       </div>
     </div>
-   
+    <div class="icons">
+      
+      This project was coded by
+      <a href="https://github.com/ketaki-c" target="_blank" class="links"
+        >Ketaki Chakraborty</a
+      >
+      and is
+      <a
+        href="https://github.com/ketaki-c/forecast"
+        target="_blank"
+        class="links"
+        >open-sourced on GitHub</a
+      >
+      and
+      <a
+        href="https://wondrous-bubblegum-eb535d.netlify.app/?#"
+        target="_blank"
+        class="links"
+        >hosted on Netlify</a
+      >
+    </div>
+  </body>
   </body>
   <script src="src/app.js"></script>
 </html>
