--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="app">
         <div class="container">
           <div class="weather">
+            <div class="weather form">
             <form id="search-form">
               <div class="row">
                 <div class="col-9">
@@ -26,6 +27,10 @@
                     id="search-input"
                   />
                 </div>
+                <input type="text" class="search-input" placeholder="Enter city or zip code" />
+                <button class="btn">Search</button>
+                <button class="btn location-btn">Location</button>
+              </div>
                 <div class="col-3">
                   <input
                     type="submit"
