--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     id="search-input"
                   />
                 </div>
-                <input type="text" class="search-input" placeholder="Enter city or zip code" />
+                <input type="text" class="search-input"/>
                 <button class="btn">Search</button>
                 <button class="btn location-btn">Location</button>
               </div>
