--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="col-5 d-flex justify-content-between">
                   <input type="submit" value="Search" class="btn btn-primary"/>
                   <button class="btn btn-outline-danger" id="location" type="button">
-                    Current
+                    Current location
                   </button>
               </div>
             </form>
