--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
               </form>
             <div class="weatherInfo">
-              <div class="row">
+              <div class="row align-items-center"> 
                 <div class="col-6">
                   <h1 id="city"></h1>
                   <ul>
